--- a/workflow/index.html
+++ b/workflow/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workflow Builder (Bootstrap Version)</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/form-builder.css">
+    </head>
 <body class="bg-light">
 
     <div id="app-container" class="vw-100 vh-100 d-flex flex-column">
-        <!-- Header -->
         <header class="bg-white bg-opacity-75 p-3 d-flex align-items-center gap-4 border-bottom shadow-sm z-3" style="backdrop-filter: blur(10px);">
             <h1 class="h4 fw-bold text-dark my-0">Workflow Builder</h1>
             <div class="mx-auto"></div>
@@ -26,6 +24,9 @@
                  </button>
             </div>
             <div class="d-flex align-items-center gap-2">
+                <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#form-builder-modal">
+                    <i class="bi bi-tools me-1"></i> Form Builder
+                </button>
                 <button data-action="import-json" class="btn btn-info text-white">Import JSON</button>
                 <button data-action="export-json" class="btn btn-dark">Export JSON</button>
             </div>
@@ -44,9 +45,7 @@
             </button>
         </header>
 
-        <!-- Main Content (Canvas and Settings) -->
         <main class="d-flex flex-grow-1 position-relative overflow-hidden">
-            <!-- New Left Panel with Tabs -->
             <aside class="d-flex flex-column flex-shrink-0 border-end" style="width: 380px; height: 100%; background-color: #fff;">
                 <ul class="nav nav-tabs nav-fill p-2" id="left-panel-tabs" role="tablist">
                     <li class="nav-item" role="presentation">
@@ -59,9 +58,7 @@
                 <div class="tab-content overflow-auto" id="left-panel-tab-content">
                     <div class="tab-pane fade show active p-3" id="tab-pane-nodes" role="tabpanel" aria-labelledby="nodes-tab">
                         <input type="search" data-ref="palette-search" placeholder="Tìm kiếm khối..." class="form-control form-control-sm mb-3">
-                        <div data-ref="palette-content">
-                            <!-- Populated by JS -->
-                        </div>
+                        <div data-ref="palette-content"></div>
                     </div>
                     <div class="tab-pane fade p-3" id="tab-pane-variables" role="tabpanel" aria-labelledby="variables-tab" data-ref="variables-panel">
                         <h3 class="h5 fw-bold text-dark mb-4">Biến</h3>
@@ -69,15 +66,9 @@
                             <h4 class="h6 fw-semibold text-secondary mb-2 border-bottom pb-1">Toàn cục (Global)</h4>
                             <div data-ref="global-variables-container" class="tree-view p-2 bg-light rounded mb-3 border"></div>
                             <form data-ref="add-global-var-form" class="row g-2">
-                                <div class="col-6">
-                                    <input type="text" name="key" placeholder="Tên biến" required class="form-control form-control-sm">
-                                </div>
-                                <div class="col-6">
-                                    <input type="text" name="value" placeholder="Giá trị (JSON)" required class="form-control form-control-sm">
-                                </div>
-                                <div class="col-12">
-                                    <button type="submit" class="btn btn-primary btn-sm w-100">Thêm</button>
-                                </div>
+                                <div class="col-6"><input type="text" name="key" placeholder="Tên biến" required class="form-control form-control-sm"></div>
+                                <div class="col-6"><input type="text" name="value" placeholder="Giá trị (JSON)" required class="form-control form-control-sm"></div>
+                                <div class="col-12"><button type="submit" class="btn btn-primary btn-sm w-100">Thêm</button></div>
                             </form>
                         </div>
                         <div>
@@ -87,19 +78,13 @@
                     </div>
                 </div>
             </aside>
-
-            <!-- Canvas Container -->
             <div data-ref="canvas-container" class="canvas-container">
                 <div data-ref="workflow-canvas" class="workflow-canvas">
                     <svg data-ref="connector-svg" class="connector-svg"></svg>
                 </div>
             </div>
-
-            <!-- Right Settings Panel (remains absolute) -->
             <aside data-ref="settings-panel" class="side-panel settings-panel hidden"></aside>
         </main>
-
-        <!-- Console Log Panel -->
         <footer data-ref="console-panel" class="bg-white border-top d-flex flex-column flex-shrink-0" style="height: 200px;">
             <div data-ref="console-resizer" class="w-100" style="height: 8px; cursor: ns-resize; background-color: #e9ecef;"></div>
             <div class="p-2 d-flex justify-content-between align-items-center border-bottom bg-light flex-shrink-0">
@@ -110,10 +95,8 @@
         </footer>
     </div>
 
-    <!-- Hidden file input for JSON import -->
     <input type="file" id="json-import-input" accept="application/json" class="d-none">
 
-    <!-- Context Menus -->
     <div data-ref="node-context-menu" class="context-menu">
         <div class="context-menu-item" data-action="copy">Sao chép <span class="context-menu-shortcut">Ctrl+C</span></div>
         <div class="context-menu-item" data-action="paste">Dán <span class="context-menu-shortcut">Ctrl+V</span></div>
@@ -132,48 +115,72 @@
         <div class="context-menu-item" data-action="copy-path">Copy đường dẫn</div>
     </div>
     
-    <!-- Variable Picker Popup -->
     <div data-ref="variable-picker-popup" class="variable-picker-popup"></div>
 
-    <!-- cURL Import Modal -->
-    <div class="modal fade" id="curl-import-modal" tabindex="-1" aria-labelledby="curlImportModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
+    <div class="modal fade" id="curl-import-modal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg"><div class="modal-content"><div class="modal-header"><h5 class="modal-title">Import from cURL Command</h5><button type="button" class="btn-close" data-bs-dismiss="modal"></button></div><div class="modal-body"><p class="text-muted small">Dán lệnh cURL vào ô bên dưới.</p><textarea id="curl-input-textarea" class="form-control font-monospace" rows="10" placeholder="curl 'https://api.example.com/...'"></textarea></div><div class="modal-footer"><button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button><button type="button" class="btn btn-primary" id="process-curl-import-btn">Import</button></div></div></div>
+    </div>
+
+    <div class="modal fade" id="form-builder-modal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content d-flex flex-column">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="curlImportModalLabel">Import from cURL Command</h5>
+                    <h5 class="modal-title h4 fw-bold"><i class="bi bi-tools me-2"></i> Settings Node Generator</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <p class="text-muted small">Dán lệnh cURL (từ Chrome DevTools, Postman, etc.) vào ô bên dưới. Ứng dụng sẽ cố gắng phân tích URL, phương thức, headers, và body.</p>
-                    <textarea id="curl-input-textarea" class="form-control font-monospace" rows="10" placeholder="curl 'https://api.example.com/...' ..."></textarea>
+                <div class="modal-body d-flex flex-grow-1 overflow-hidden p-0">
+                    <aside class="palette border-end bg-light" style="width: 280px; min-width: 280px;">
+                        <div class="p-3 border-bottom"><h5 class="fw-bold my-1">Hộp công cụ</h5></div>
+                        <div id="component-palette" class="p-3 overflow-auto"></div>
+                    </aside>
+                    <div class="flex-grow-1 d-flex flex-column p-4 overflow-auto bg-white">
+                        <div class="d-flex justify-content-between align-items-center mb-4">
+                            <h5 class="fw-bold my-0">Vùng làm việc</h5>
+                            <button id="clear-canvas-btn" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash me-1"></i> Dọn dẹp</button>
+                        </div>
+                        <div id="canvas" class="canvas flex-grow-1 p-4 rounded border bg-body-tertiary">
+                            <p class="text-muted text-center">Kéo các thành phần từ Hộp công cụ vào đây</p>
+                        </div>
+                    </div>
+                    <aside class="properties-panel border-start bg-light" style="width: 350px; min-width: 350px;">
+                        <div class="p-3 border-bottom"><h5 class="fw-bold my-1">Thuộc tính</h5></div>
+                        <div id="properties-panel" class="p-3 overflow-auto"></div>
+                    </aside>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-                    <button type="button" class="btn btn-primary" id="process-curl-import-btn">Import</button>
+                    <button type="button" id="generate-btn" class="btn btn-success"><i class="bi bi-code-slash me-2"></i> Tạo Cấu hình</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Bootstrap JS Bundle -->
+    <div class="modal fade" id="output-modal" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header"><h5 class="modal-title">Cấu hình `settings` đã tạo</h5><button type="button" class="btn-close" data-bs-dismiss="modal"></button></div>
+          <div class="modal-body"><p>Sếp hãy copy đoạn code dưới đây và dán vào thuộc tính `settings` của node trong file `config.js`.</p><pre><code id="output-code" class="language-javascript" style="white-space: pre-wrap; max-height: 60vh; display: block;"></code></pre></div>
+          <div class="modal-footer"><button type="button" id="copy-code-btn" class="btn btn-primary"><i class="bi bi-clipboard me-1"></i> Copy Code</button></div>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/logger.js"></script>
     <script src="js/setting.js"></script>
     <script src="js/workflow.js"></script>
     <script src="js/config.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+    <script src="js/form-builder.js"></script>
     <script>
-
         // --- INITIALIZATION ---
         document.addEventListener('DOMContentLoaded', () => {
-            // Define initial global variables
             const initialGlobals = {
                 apiKey: "ABC-123-XYZ",
                 environment: "production",
                 adminEmail: "admin@example.com",
                 todoId: 1
             };
-
-            // Initialize the builder. 
             new WorkflowBuilder('app-container', workflowConfig, null, initialGlobals);
         });
     </script>
