--- a/workflow/index.html
+++ b/workflow/index.html
@@ -133,13 +133,29 @@
                         <div class="p-3 border-bottom"><h5 class="fw-bold my-1">Hộp công cụ</h5></div>
                         <div id="component-palette" class="p-3 overflow-auto"></div>
                     </aside>
-                    <div class="flex-grow-1 d-flex flex-column p-4 overflow-auto bg-white">
-                        <div class="d-flex justify-content-between align-items-center mb-4">
-                            <h5 class="fw-bold my-0">Vùng làm việc</h5>
-                            <button id="clear-canvas-btn" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash me-1"></i> Dọn dẹp</button>
-                        </div>
-                        <div id="canvas" class="canvas flex-grow-1 p-4 rounded border bg-body-tertiary">
-                            <p class="text-muted text-center">Kéo các thành phần từ Hộp công cụ vào đây</p>
+                    <div class="flex-grow-1 d-flex flex-column bg-white">
+                        <ul class="nav nav-tabs nav-fill px-4 pt-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" data-bs-toggle="tab" href="#builder-canvas-tab">Vùng làm việc</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-bs-toggle="tab" href="#builder-preview-tab">Xem trước</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content flex-grow-1 d-flex flex-column overflow-auto">
+                            <div class="tab-pane fade show active p-4" id="builder-canvas-tab">
+                                <div class="d-flex justify-content-between align-items-center mb-4">
+                                    <h5 class="fw-bold my-0">Vùng làm việc</h5>
+                                    <button id="clear-canvas-btn" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash me-1"></i> Dọn dẹp</button>
+                                </div>
+                                <div id="canvas" class="canvas flex-grow-1 p-4 rounded border bg-body-tertiary">
+                                    <p class="text-muted text-center">Kéo các thành phần từ Hộp công cụ vào đây</p>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade p-4" id="builder-preview-tab">
+                                <h5 class="fw-bold my-0 mb-4">Xem trước Form</h5>
+                                <div id="preview-pane" class="p-4 rounded border bg-body-tertiary"></div>
+                            </div>
                         </div>
                     </div>
                     <aside class="properties-panel border-start bg-light" style="width: 350px; min-width: 350px;">
@@ -181,6 +197,8 @@
                 adminEmail: "admin@example.com",
                 todoId: 1
             };
+            // <<< THAY ĐỔI: Khởi tạo WorkflowBuilder trước
+            // FormBuilder sẽ được tự động khởi tạo bên trong constructor của WorkflowBuilder
             new WorkflowBuilder('app-container', workflowConfig, null, initialGlobals);
         });
     </script>
