--- a/workflow/index.html
+++ b/workflow/index.html
@@ -154,7 +154,7 @@
                             </div>
                             <div class="tab-pane fade p-4" id="builder-preview-tab">
                                 <h5 class="fw-bold my-0 mb-4">Xem trước Form</h5>
-                                <div id="preview-pane" class="p-4 rounded border bg-body-tertiary"></div>
+                                <div id="preview-pane"></div>
                             </div>
                         </div>
                     </div>
