--- a/workflow/index.html
+++ b/workflow/index.html
@@ -105,7 +105,7 @@
                             </button>
                         </div>
                         <div class="shadow-sm border rounded bg-white overflow-hidden d-flex">
-                            <button data-action="reset-view" class="border-0 border-end bg-transparent" style="width: 30px; height: 30px;">
+                            <button data-action="toggle-console" class="border-0 border-end bg-transparent" style="width: 30px; height: 30px;">
                                 <i class="ri-terminal-box-line"></i>
                             </button>
                         </div>
@@ -204,15 +204,6 @@
         </div>
     </div>
 
-    <div class="modal fade" id="output-modal" tabindex="-1" aria-hidden="true">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header"><h5 class="modal-title">Cấu hình `settings` đã tạo</h5><button type="button" class="btn-close" data-bs-dismiss="modal"></button></div>
-          <div class="modal-body"><p>Sếp hãy copy đoạn code dưới đây và dán vào thuộc tính `settings` của node trong file `config.js`.</p><pre><code id="output-code" class="language-javascript" style="white-space: pre-wrap; max-height: 60vh; display: block;"></code></pre></div>
-          <div class="modal-footer"><button type="button" id="copy-code-btn" class="btn btn-primary"><i class="bi bi-clipboard me-1"></i> Copy Code</button></div>
-        </div>
-      </div>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/logger.js"></script>
     <script src="js/setting.js"></script>
