--- a/workflow/index.html
+++ b/workflow/index.html
@@ -74,6 +74,9 @@
                 <div data-ref="canvas-container" class="canvas-container position-relative">
                     <div class="position-absolute end-0 d-flex top-0 m-3" style="z-index: 998;">
 
+                        <button id="save-workflow-btn" class="btn btn-primary me-2"><i class="ri-save-line me-1"></i> Lưu</button>
+                        <button id="load-workflow-btn" class="btn btn-secondary me-2"><i class="ri-folder-open-line me-1"></i> Mở...</button>
+
                         <button data-action="import-json" class="btn btn-info text-white me-2">Import JSON</button>
                         <button data-action="export-json" class="btn btn-dark me-2">Export JSON</button>
                     
@@ -204,6 +207,44 @@
         </div>
     </div>
 
+    <div class="modal fade" id="load-workflow-modal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Mở Workflow đã lưu</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="text-muted small">Chọn một workflow từ danh sách để mở.</p>
+                    <div id="saved-workflows-list" class="list-group">
+                        </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="save-workflow-modal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Lưu Workflow</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <label for="workflow-name-input" class="form-label">Tên Workflow</label>
+                    <input type="text" id="workflow-name-input" class="form-control" required>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+                    <button type="button" id="confirm-save-btn" class="btn btn-primary">Lưu</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/logger.js"></script>
     <script src="js/setting.js"></script>
@@ -212,19 +253,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <script src="js/form-builder.js"></script>
-    <script>
-        // --- INITIALIZATION ---
-        document.addEventListener('DOMContentLoaded', () => {
-            const initialGlobals = {
-                apiKey: "ABC-123-XYZ",
-                environment: "production",
-                adminEmail: "admin@example.com",
-                todoId: 1
-            };
-            // <<< THAY ĐỔI: Khởi tạo WorkflowBuilder trước
-            // FormBuilder sẽ được tự động khởi tạo bên trong constructor của WorkflowBuilder
-            new WorkflowBuilder('app-container', workflowConfig, null, initialGlobals);
-        });
-    </script>
+    <script src="js/database.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
