--- a/workflow/shell.html
+++ b/workflow/shell.html
@@ -11,8 +11,9 @@
     <header class="titlebar d-flex align-items-center">
         <div class="drag-region">
             <div class="tab-manager d-flex align-items-center">
-                <div class="tab-bar" id="tab-bar"></div>
-                <button id="add-tab-btn" class="add-tab-btn"><i class="ri-add-line"></i></button>
+                <div class="tab-bar d-flex align-items-center" id="tab-bar">
+                    <button id="add-tab-btn" class="add-tab-btn"><i class="ri-add-line"></i></button>
+                </div>
             </div>
         </div>
 
