--- a/workflow/workflow.html
+++ b/workflow/workflow.html
@@ -12,6 +12,10 @@
     </head>
 <body>
 
+    <div id="loading-overlay">
+        <div class="spinner"></div>
+    </div>
+
     <div id="app-container" class="vw-100 vh-100 d-flex flex-column">
         <main data-ref="main-ui" class="d-flex flex-grow-1 position-relative overflow-hidden">
         <nav class="h-100 border-end bg-blur-2" style="width: 100px; padding: 10px">
