--- a/workflow/shell.html
+++ b/workflow/shell.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/shell.css">
 </head>
 <body>
-    <header class="titlebar d-flex align-items-center">
+    <header class="titlebar d-flex align-items-center shadow-md">
+        
         <div class="drag-region">
             <div class="tab-manager d-flex align-items-center">
                 <div class="tab-bar d-flex align-items-center" id="tab-bar">
@@ -18,33 +19,33 @@
         </div>
 
         <div class="window-controls">
-            <button id="minimize-btn"><i class="ri-subtract-line"></i></button>
-            <button id="maximize-btn"><i class="ri-checkbox-blank-line"></i></button>
-            <button id="close-btn"><i class="ri-close-line"></i></button>
+            <button class="rounded text-white" id="minimize-btn"><i class="ri-subtract-line"></i></button>
+            <button class="rounded text-white" id="maximize-btn"><i class="ri-checkbox-blank-line"></i></button>
+            <button class="rounded text-white" id="close-btn"><i class="ri-close-line"></i></button>
         </div>
     </header>
 
     <div id="start-page-overlay" class="start-page-container">
-        <div class="start-page-content">
-            <h1 class="start-page-title">Workflow Builder</h1>
-            <p class="start-page-subtitle">Tự động hóa công việc của sếp một cách trực quan.</p>
-            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center start-actions">
-                <button data-action="create-new-workflow" type="button" class="btn btn-primary btn-lg px-4 gap-3">Tạo Workflow Mới</button>
-            </div>
-            <div class="workflow-list-container">
+        <div class="mx-auto p-5" style="width: 800px;">
+            <div class="start-page-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h2 class="workflow-list-header mb-0">Mở workflow gần đây</h2>
-                    <div class="input-group" style="max-width: 250px;">
-                        <span class="input-group-text"><i class="ri-search-line"></i></span>
-                        <input type="search" id="workflow-search-input" class="form-control" placeholder="Tìm kiếm workflow...">
+                    <strong class="start-page-title fs-5">Recent files</strong>
+                    <button data-action="create-new-workflow" type="button" class="btn btn-primary rounded-pill fw-medium shadow-sm"><i class="ri-add-circle-line"></i> Tạo mới</button>
+                </div>
+                <div class="workflow-list-container">
+                    <div class="d-flex justify-content-between align-items-center mb-3 position-relative">
+                        <i class="ri-search-line position-absolute start-0 fs-5 ms-3"></i>
+                        <input type="search" id="workflow-search-input" class="form-control rounded-3 ps-5 shadow-sm rounded-pill py-3 px-4" placeholder="Tìm kiếm workflow...">
+                    </div>
+                    
+                    <div id="start-page-workflow-list" class="list-group list-group-flush workflow-list">
+                    </div>
+
+                    <div id="load-more-container" class="text-center mt-3" style="display: none;">
+                        <button id="load-more-btn" class="btn btn-outline-secondary">Tải thêm</button>
                     </div>
                 </div>
-                <div id="start-page-workflow-list" class="list-group list-group-flush workflow-list">
-                </div>
-                <div id="load-more-container" class="text-center mt-3" style="display: none;">
-                    <button id="load-more-btn" class="btn btn-outline-secondary">Tải thêm</button>
-                </div>
-                </div>
+            </div>
         </div>
     </div>
     <main id="webview-container" class="webview-container">
