--- a/workflow/shell.html
+++ b/workflow/shell.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="css/shell.css">
 </head>
 <body>
-    <header class="titlebar d-flex align-items-center shadow-md">
+    <header class="titlebar d-flex align-items-center justify-content-between shadow-md">
         
         <div class="drag-region">
             <div class="tab-manager d-flex align-items-center">
                 <div class="tab-bar d-flex align-items-center" id="tab-bar">
-                    <button id="add-tab-btn" class="add-tab-btn"><i class="ri-add-line"></i></button>
                 </div>
+                <button id="add-tab-btn" class="add-tab-btn"><i class="ri-add-line"></i></button>
             </div>
         </div>
 
