--- a/workflow/workflow.html
+++ b/workflow/workflow.html
@@ -82,9 +82,7 @@
                                 </div>
                                 <div>
                                     <div class="palette-category"><h6 class="text-muted small fw-bold text-uppercase mb-2 mt-3">Actions</h6>
-                                        <div class="palette-grid">
-                                            <div id="workflow-list"></div>
-                                        </div>
+                                        <div id="workflow-list" class="palette-grid"></div>
                                     </div>
                                 </div>
                             </div>
