--- a/workflow/workflow.html
+++ b/workflow/workflow.html
@@ -304,6 +304,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/i18n.js"></script>
     <script src="js/logger.js"></script>
     <script src="js/setting.js"></script>
     <script src="js/runner.js"></script>
