--- a/workflow/shell.html
+++ b/workflow/shell.html
@@ -5,6 +5,7 @@
     <title data-i18n="shell.start_page">Workflow Builder Tabs</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/shell.css">
 </head>
 <body>
@@ -52,6 +53,8 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
+    <script src="js/i18n.js"></script>
     <script src="js/shell.js"></script>
 </body>
 </html>
