--- a/workflow/workflow.html
+++ b/workflow/workflow.html
@@ -78,7 +78,7 @@
                             </div>
                             <div class="tab-pane fade" id="workflows-panel" role="tabpanel" aria-labelledby="workflows-tab-btn">
                                 <div class="p-2">
-                                    <input type="search" id="workflow-list-search" id="workflow-list-search" data-i18n-placeholder="workflow_page.workflows_tab.search_placeholderr" class="form-control form-control-sm mb-3">
+                                    <input type="search" id="workflow-list-search" id="workflow-list-search" data-i18n-placeholder="workflow_page.workflows_tab.search_placeholder" class="form-control form-control-sm mb-3">
                                 </div>
                                 <div>
                                     <div class="palette-category"><h6 class="text-muted small fw-bold text-uppercase mb-2 mt-3">Actions</h6>
